<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:title="GPS Latency"
        android:summary="How often the app should get seek another location update affects power consumption"
        android:key="@string/key_latency"
        android:entries="@array/power_settings"
        android:entryValues="@array/power_settings">
    </ListPreference>

    <ListPreference android:title="Units"
        android:summary="What units system would you like to use?"
        android:key="@string/key_units"
        android:entries="@array/unit_systems"
        android:entryValues="@array/unit_systems">
    </ListPreference>

    <SwitchPreference
        android:title="Show Stops"
        android:summary="Would you like registered stops to be visible on the map?"
        android:key="@string/key_show_stops"
        android:defaultValue="true">
    </SwitchPreference>

    <SwitchPreference
        android:title="Checkpoints"
        android:summary="Maps only show essential points."
        android:key="@string/key_use_checkpoints"
        android:defaultValue="true"/>


    <ListPreference
        android:title="Stop Sensitivity"
        android:summary="Changes the amount of motion that will be considered a stop"
        android:key="@string/key_stop_sensitivity"
        android:entries="@array/power_settings"
        android:entryValues="@array/power_settings">
    </ListPreference>

    <SwitchPreference
        android:title="Show Stats While Tracking"
        android:summary="Would you like time, distance, etc settings displayed while tracking?"
        android:key="@string/key_show_stats_tracking"
        android:defaultValue="true"/>

</PreferenceScreen>